--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="text_password">Senha</string>
     <string name="text_name">Nome</string>
     <string name="text_register">Registrar</string>
+    <string name="lessons">Lições</string>
+    <string name="ranking">Ranking</string>
+    <string name="profile">Perfil</string>
 </resources>
