criando tela de resultados - closes #13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="change_password">Alterar minha senha</string>
     <string name="bt_continue">Continuar</string>
     <string name="bt_confirm">Confirmar</string>
+    <string name="lets_go">Vamos lá!</string>
 </resources>
