--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="lesson_score_text">Pontuação da lição:</string>
     <string name="need_try_again">Você precisa revisar novamente!</string>
     <string name="congrats_go_to_next_module">Você está pronto para o próximo módulo</string>
+    <string name="your_answer">Sua resposta: %1$s</string>
+    <string name="correct_answer">Resposta correta: %1$s</string>
 </resources>
